ASPCommon.h:      - Added MedianFilter() to list of function prototypes
Median.c:  
     - Changed Median() to MedianFilter() for median-filtering a data array.  Median() now simply finds the median value of an array.

ASPFitsReader.c, ASPZap.c, ReadPSRFITSHdr.c:  
     - No change, just some debugging print statements added and subtracted

ASPCal.c, GetCalData.c:  
     - Fixed determination of on vs. off continuum scans -- now uses off-cal values to compare
     - Uses median Tsys ratios, rather than average, to determine whether to use constant Tsys method in the case that -choose option is chosen



git-svn-id: svn+ssh://nanograv.astro.ubc.ca/data1/svn/repos/ASPFitsReader@113 cca996d7-57bb-40df-b7ff-243d9995c488

--- a/src/Makefile
+++ b/src/Makefile
@@ -20,10 +20,11 @@ LCFITSIO = -L${FITS_LIB_DIR} -lcfitsio -lm
 
 
 ### SPECIFY PGPLOT INCLUDE AND LIBRARY DIRECTORIES HERE ###
-PGPLOT_INCLUDE_DIR = /usr/local/pgplot
-PGPLOT_LIB_DIR = /usr/local/pgplot
+PGPLOT_INCLUDE_DIR = /usr/local/lib/pgplot
+PGPLOT_LIB_DIR = /usr/local/lib/pgplot
 
 ### SPECIFY X11 LIBRARY DIRECTASPORY HERE ###
+X11_INCLUDE_DIR = /usr/X11R6/include
 X11_LIB_DIR = /usr/X11R6/lib
 
 LCPGPLOT = -L$(PGPLOT_LIB_DIR) -lcpgplot -lpgplot  -L$(X11_LIB_DIR) -lX11 -lpng -pg -lgfortran # -L/sw/lib -lg2c -pg
@@ -31,14 +32,14 @@ LCPGPLOT = -L$(PGPLOT_LIB_DIR) -lcpgplot -lpgplot  -L$(X11_LIB_DIR) -lX11 -lpng 
 
 ### C COMPILER AND FLAGS ###
 CC = gcc
-CFLAGS = -Wall -c -g -DASP -I$(ASP_INCLUDE_DIR) -I$(FITS_INCLUDE_DIR) -I$(PGPLOT_INCLUDE_DIR)
+CFLAGS = -Wall -c -g -DASP -I$(ASP_INCLUDE_DIR) -I$(FITS_INCLUDE_DIR) -I$(X11_INCLUDE_DIR) -I$(PGPLOT_INCLUDE_DIR)
 # CFLAGS_NO_OPT = -Wall -g -DASP -I$(ASP_INCLUDE_DIR) -I$(FITS_INCLUDE_DIR) -I$(PGPLOT_INCLUDE_DIR)
 #CFLAGS_OPT2 = -Wall -O3 -g -DASP -I$(ASP_INCLUDE_DIR) -I$(FITS_INCLUDE_DIR)  -I$(PGPLOT_INCLUDE_DIR)
 
 
 ### GFORTRAN FLAGS ###
 F77 = gfortran
-F77FLAGS = -c -Wall -ffixed-form -ffixed-line-length-none -fPIC -std=legacy -I$(ASP_INCLUDE_DIR)
+F77FLAGS = -c -Wall -ffixed-form -ffixed-line-length-none -fPIC -std=legacy -I$(X11_INCLUDE_DIR) -I$(ASP_INCLUDE_DIR)
 
 ### G77 FLAGS ###
 # F77 = g77
